[package]
name = "peaq-pallet-mor"
version = "0.1.0"
edition = "2021"
description = "A pallet that handles peaq`s block reward distribution for machine owners."
authors = ["peaq <https://github.com/peaqnetwork>"]
homepage = "https://peaq.network/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/peaqnetwork/peaq-pallet-mor/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
pallet-balances = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-sudo = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

[dependencies]
parity-scale-codec = { version = "3.2.2", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", optional = true, branch = "release-polkadot-v1.1.0" }
frame-support = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-system = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# [TODO] Need to change
peaq-pallet-did = { default-features = false, git = "https://github.com/peaqnetwork/peaq-pallet-did", branch = "peaq-polkadot-v1.1.0" }
scale-info = { default-features = false, features = ["derive"], version = "2.0.1" }
serde = { version = "1.0", features = ["derive"], optional = true }
sp-core = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-std = { default-features = false, git = "https://github.com/peaqnetwork/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
log = { version = "0.4.17", default-features = false }
num-traits = { version = "0.2.18", default-features = false }

[features]
default = ["std"]
std = [
	"log/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "parity-scale-codec/std",
    "peaq-pallet-did/std",
    "scale-info/std",
    "serde",
    "sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
